--- a/术语翻译汇总.md
+++ b/术语翻译汇总.md
@@ -23,7 +23,7 @@
 | 19    | [Issue 19] | identity & identities                                         | 同一性                            |                                    | 解决     |
 | 20    | [Issue 20] | Information Artifact Ontology                                 | 信息工件本体                      |                                    | 解决     |
 | 21    | [Issue 21] | instantiate  & instantiates                                   | 实例化                            |                                    | 解决     |
-| 22    | [Issue 22] | integral_occurrent_part                                       | 是...必要常体部分                 |                                    | **未解决** |
+| 22    | [Issue 22] | integral_occurrent_part                                       | 是...必要常体部分                 |                                    | 解决     |
 | 23    | [Issue 23] | Reciprocity & reciprocal                                      | 互反                              | 互惠？互换？                       | 解决     |
 | 24    | [Issue 24] | Living subject                                                | 生命主体                          |                                    | 解决     |
 | 25    | [Issue 25] | Low-Hanging Fruit & low-hanging fruit pirinciple              | 低果先摘                          |                                    | 解决     |
@@ -51,10 +51,10 @@
 | 47    | [Issue 46] | referent & referents                                          | 所指物                            |                                    | 解决     |
 | 48    | [Issue 47] | regimentation & regimentations                                | 整编                              |                                    | 解决     |
 | 49    | [Issue 48] | entities and relationships                                    | 实体和关系                        |                                    | 解决     |
-| 50    | [Issue 49] | knowledge representation                                      | 知识表示                          | 知识表达                           | **未解决** |
-| 51    | [Issue 50] | representation & representations                              | 表征 & 表象 & 表示                |                                    | **未解决** |
-| 52    | [Issue 51] | representational artifact  & representational artifacts       | 表述性工件                        | 表征性工件                         | **未解决** |
-| 53    | [Issue 52] | representational units and composite representations          | 表述单元和复合表述                |                                    | **未解决** |
+| 50    | [Issue 49] | knowledge representation                                      | 知识表达                          | 知识表示 （动词用“表达"）          | 解决     |
+| 51    | [Issue 50] | representation & representations                              | 表征                              |                                    | 解决     |
+| 52    | [Issue 51] | representational artifact  & representational artifacts       | 表征性工件                        | 表征性工件                         | 解决     |
+| 53    | [Issue 52] | representational units and composite representations          | 表征单元和复合表征                |                                    | 解决      |
 | 54    | [Issue 53] | singular noun rule                                            | 单数名词规则                      |                                    | 解决     |
 | 55    | [Issue 54] | taxonomy  & taxonomies                                        | 专业分类表                        |                                    | 解决     |
 | 56    | [Issue 54] | classification & taxonomic classification                     | 分类法 & 专业分类                 |                                    | 解决     |
@@ -84,27 +84,27 @@
 | 80    | [Issue 77] | instance-level                                                | 实例级                            |                                    | 解决     |
 | 81    | [Issue 78] | Region Connection Calculus                                    | 区域连接演算                      | Region Connection Calculus (RCC)   | 解决     |
 | 82    | [Issue 79] | 原书勘误                                                      |                                   |                                    | 解决     |
-| 83    | [Issue 96] | parthood                                                      | 部分关系                          |                                    | 解决      |
-| 84    | [Issue 96] | part & parts                                                  | 部分                              |                                    | 解决      |
-| 85    | [Issue 80] | integral parthood                                             | 组成部件关系                      |                                    | **未解决** |
+| 83    | [Issue 96] | parthood                                                      | 部分关系                          |                                    | 解决     |
+| 84    | [Issue 96] | part & parts                                                  | 部分                              |                                    | 解决     |
+| 85    | [Issue 80] | integral parthood                                             | 必需部分关系                      |                                    | 解决     |
 | 86    | [Issue 81] | relata                                                        | 关系项                            |                                    | 解决     |
-| 87    | [Issue 82] | Weak supplementation                                          | 弱补充                            |                                    | **未解决** |
-| 88    | [Issue 83] | ontology & ontologies                                         | 本体 & 本体论                     |                                    | **未解决** |
-| 89    | [Issue 84] | Mental Functioning Ontology                                   | 心理机能本体                      | 心理功能本体？精神功能本体？       | **未解决** |
-| 90    | [Issue 85] | Unique product                                                | 唯一积                            |                                    | **未解决** |
+| 87    | [Issue 82] | Weak supplementation                                          | 弱补充                            |                                    | 解决     |
+| 88    | [Issue 83] | ontology & ontologies                                         | 本体 & 本体论                     |                                    | 解决     |
+| 89    | [Issue 84] | Mental Functioning Ontology                                   | 心理功能本体                      | 精神功能本体？心理机能本体         | 解决     |
+| 90    | [Issue 85] | Unique product                                                | 唯一乘积                          |                                    | 解决     |
 | 91    | [Issue 86] | category & categories                                         | 范畴                              |                                    | 解决     |
 | 92    | [Issue 87] | minimum information to reference an external ontology term    | 外部本体术语引用最小信息原则      | MIREOT                             | 解决     |
-| 93    | [Issue 88] | Representationalism                                           | 表征主义                          |                                    | **未解决** |
-| 94    | [Issue 89] | causally unified                                              | 因果统一                          |                                    | **未解决** |
+| 93    | [Issue 88] | Representationalism                                           | 表征主义                          |                                    | 解决     |
+| 94    | [Issue 89] | causally unified                                              | 自成一体                          |                                    | 解决     |
 | 95    | [Issue 90] | Descriptive Ontology for Linguistic and Cognitive Engineering | 语言学和认知工程描述本体          |                                    | 解决     |
 | 96    | [Issue 90] | Standard Upper Merged Ontology                                | 标准上层合并本体                  |                                    | 解决     |
 | 97    | [Issue 91] | PhilPaper                                                     | PhilPaper                         | 专有名词，可以不翻译               | 解决     |
 | 98    | [Issue 92] | nonskeptical realism                                          | 非怀疑论的实在论                  |                                    | 解决     |
 | 99    | [Issue 93] | mental representations                                        | 心理表征                          |                                    | 解决     |
-| 100   | [Issue 94] | disorder & disorders                                          | 紊乱                              | 紊乱/障碍                          |  解决    |
+| 100   | [Issue 94] | disorder & disorders                                          | 紊乱                              | 紊乱/障碍                          | 解决     |
 | 101   | [Issue 95] | Basic Formal Ontology                                         | 基本形式化本体                    |                                    | 解决     |
-| 102   | [Issue 96] | Site & Sites                                                  | 位域                              |                                    | **未解决** |
-| 103   | [Issue 97] | object & objects                                              | 物件                              |   对象？                           | **未解决** |
+| 102   | [Issue 96] | Site & Sites                                                  | 位                                |                                    | 解决     |
+| 103   | [Issue 97] | object & objects                                              | 物件                              |   对象？                           | 解决     |
 | 104   | [Issue 97] | continuant & continuants                                      | 常体                              |                                    | 解决       |
 | 105   | [Issue 97] | generically dependent continuant                              | 普遍依赖性常体                    |                                    | 解决       |
 | 106   | [Issue 97] | independent continuant                                        | 独立常体                          |                                    | 解决       |
