--- a/术语翻译汇总.md
+++ b/术语翻译汇总.md
@@ -4,8 +4,8 @@
 |-------|------------|---------------------------------------------------------------|-----------------------------------|------------------------------------|----------|
 | 1     | [Issue 2]  | artifact & artifacts                                          | 工件                              |                                    | 解决     |
 | 2     | [Issue 3]  | aboutness                                                     | 关涉性                            |                                    | 解决     |
-| 3     | [Issue 4]  | Adequatism                                                    | 适当主义                          |                                    | **未解决** |
-| 4     | [Issue 5]  | adequatist                                                    | 适当主义者                        |                                    | **未解决** |
+| 3     | [Issue 4]  | Adequatism                                                    | 充分原则                          |                                    | 解决     |
+| 4     | [Issue 5]  | adequatist                                                    | 充分原则论者                       |                                    | 解决     |
 | 5     | [Issue 6]  | assertion & assertions                                        | 断言                              |                                    | 解决     |
 | 6     | [Issue 7]  | class & classes                                               | 类                                |                                    | 解决     |
 | 7     | [Issue 8]  | containment  & containments                                   | 包含                              |                                    | 解决     |
