--- a/术语翻译汇总.md
+++ b/术语翻译汇总.md
@@ -90,7 +90,7 @@
 | 86    | [Issue 81] | relata                                                        | 关系项                            |                                    | 解决     |
 | 87    | [Issue 82] | Weak supplementation                                          | 弱补充                            |                                    | 解决     |
 | 88    | [Issue 83] | ontology & ontologies                                         | 本体 & 本体论                     |                                    | 解决     |
-| 89    | [Issue 84] | Mental Functioning Ontology                                   | 心理功能本体                      | 精神功能本体？心理机能本体         | 解决     |
+| 89    | [Issue 84] | Mental Functioning Ontology                                   | 精神功能本体                      | 精神功能本体？心理机能本体         | 解决     |
 | 90    | [Issue 85] | Unique product                                                | 唯一乘积                          |                                    | 解决     |
 | 91    | [Issue 86] | category & categories                                         | 范畴                              |                                    | 解决     |
 | 92    | [Issue 87] | minimum information to reference an external ontology term    | 外部本体术语引用最小信息原则      | MIREOT                             | 解决     |
