--- a/术语翻译汇总.md
+++ b/术语翻译汇总.md
@@ -25,7 +25,7 @@
 | 21    | [Issue 21] | instantiate  & instantiates                                   | 实例化                            |                                    | 解决     |
 | 22    | [Issue 22] | integral_occurrent_part                                       | 是...必要常体部分                 |                                    | 解决     |
 | 23    | [Issue 23] | Reciprocity & reciprocal                                      | 互反                              | 互惠？互换？                       | 解决     |
-| 24    | [Issue 24] | Living subject                                                | 生命主体                          |                                    | 解决     |
+| 24    | [Issue 24] | Living subject                                                | 生命体                            |                                    | 解决     |
 | 25    | [Issue 25] | Low-Hanging Fruit & low-hanging fruit pirinciple              | 低果先摘                          |                                    | 解决     |
 | 26    | [Issue 26] | mass nouns                                                    | 不可数名词                        |                                    | 解决     |
 | 27    | [Issue 27] | metaphysical nominalism                                       | 形而上学唯名论                    |                                    | 解决     |
